XWIKI-21848: Migrate NotificationFilterPreferenceLivetableResults to a Live Data source
  * Improve work after Manuel's review
  * Provide some helpers to factorize code and provide better SoC
  * Use a dedicated StaticList displayer

Co-Authored-By: Manuel Leduc <manuel.leduc@xwiki.com>